# yafs-drl-iiot-edge-fog-cloud-offloading

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/yafs/: action.py  application.py  core.py  distribution.py  metrics.py  path_routing.py  placement.py  population.py  selection.py  stats.py  topology.py
system-dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
system-dashboard/backend/: Program.cs  appsettings.json
system-dashboard/frontend/: angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
system-dashboard/src/: App.jsx  index.css
tutorial_scenarios/02_serviceMovement/: main.py
tutorial_scenarios/03_topologyChanges/: main.py
tutorial_scenarios/04_userMovement/: main.py
yafs-drl/: Evolutive_population.py  README.md  README_CONFIRMED_REQUIREMENTS.md  README_FINAL_DEMO.md  README_INTEGRATED_LOCAL_CLOUD.md  cloud_policy.py  config.py  drl_dqn_selector.py  drl_q_selector.py  event_generator.py  local_cloud_exporter.py  main.py  offloading_decision_core.py  requirements.txt  run_api.sh  run_cloud_export_once.sh  run_demo_validation.sh  run_integrated_api.sh  run_local_cloud_exporter.sh  selection_multipleDeploys.py  sensor_thresholds.py  topology_generator_1000.py  yafs_adapter_notes.py
yafs-drl/analysis/: compare_baseline.py  compute_kpis.py  export_dashboard_json.py  validate_proposal_metrics.py  validate_requirements.py
yafs-drl/dashboard_exports/: baseline_comparison.json  baseline_validation_summary.json  comparison.json  drl_efficiency.json  kpis.json  nodes.json  (+8 more)
(+45 files in other folders)
